# LLM-INFERENCE-ENGINE

./: .gitignore  README.md  pyproject.toml
cpp_backend/: CMakeLists.txt  README.md  onnx_grpc_server.cc  onnx_runtime_core.cc  onnx_runtime_core.h
examples/: benchmark_1000.py  run_engine.py
proto/: inference.proto
src/llm_engine/: __init__.py  __main__.py  backend.py  benchmark.py  cli.py  config.py  engine.py  grpc_backend.py  kv_cache.py  metrics.py  scheduler.py  types.py
tests/: test_benchmark.py  test_engine.py  test_kv_cache.py
