[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-inference-engine"
version = "0.1.0"
description = "A compact LLM serving simulator with continuous batching and a paged KV-cache manager."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
llm-engine-demo = "llm_engine.cli:main"
llm-engine-benchmark = "llm_engine.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
